# SQRust

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  install.sh  sqrust.toml.example
sqrust-cli/: Cargo.toml
sqrust-cli/src/: main.rs
sqrust-cli/tests/: bigquery_integration_test.rs  dialect_flag_test.rs  json_output_test.rs
sqrust-core/: Cargo.toml
sqrust-core/src/: config.rs  lib.rs
sqrust-rules/: Cargo.toml
sqrust-rules/src/: lib.rs
sqrust-rules/src/ambiguous/: add_months_function.rs  ambiguous_bool_op.rs  ambiguous_date_format.rs  between_null_boundary.rs  between_reversed_bounds.rs  case_null_check.rs  case_when_same_result.rs  cast_to_varchar.rs  cast_without_length.rs  chained_comparisons.rs  coalesce_with_single_arg.rs  column_name_conflict.rs  concat_function_null_arg.rs  convert_function.rs  cross_join_keyword.rs  date_arithmetic.rs  date_trunc_function.rs  dateadd_function.rs  distinct_with_window_function.rs  division_by_zero.rs  exists_select_list.rs  floating_point_comparison.rs  format_function.rs  full_outer_join.rs  function_on_filtered_column.rs  group_by_position.rs  having_without_group_by.rs  implicit_boolean_comparison.rs  implicit_cross_join.rs  implicit_order_direction.rs  in_subquery_multi_column.rs  inconsistent_column_reference.rs  inconsistent_order_by_direction.rs  integer_division.rs  interval_expression.rs  join_without_condition.rs  like_escape_char.rs  mixed_join_types.rs  mod.rs  multiple_count_distinct.rs  (+26 more)
sqrust-rules/src/capitalisation/: functions.rs  keywords.rs  literals.rs  mod.rs  types.rs
sqrust-rules/src/convention/: avoid_iif.rs  boolean_comparison.rs  case_else.rs  cast_vs_convert.rs  coalesce.rs  coalesce_null_arg.rs  colon_cast.rs  comma_style.rs  concat_operator.rs  count_star.rs  mod.rs  (+59 more)
sqrust-rules/tests/: add_column_without_default_test.rs  add_months_function_test.rs  aggregate_in_where_test.rs  aggregate_star_test.rs  alias_on_new_line_test.rs  alter_column_type_test.rs  alter_table_add_not_null_without_default_test.rs  alter_table_drop_column_test.rs  alter_table_rename_column_test.rs  alter_table_set_not_null_test.rs  alter_view_statement_test.rs  ambiguous_bool_op_test.rs  ambiguous_date_format_test.rs  anti_join_pattern_test.rs  arithmetic_operator_at_line_end_test.rs  arithmetic_operator_padding_test.rs  avoid_iif_test.rs  between_null_boundary_test.rs  between_reversed_bounds_test.rs  blank_line_after_cte_test.rs  blank_line_between_ctes_test.rs  blank_line_between_statements_test.rs  boolean_comparison_test.rs  call_statement_test.rs  case_else_test.rs  case_end_new_line_test.rs  case_null_check_test.rs  case_when_count_test.rs  case_when_same_result_test.rs  cast_to_varchar_test.rs  cast_vs_convert_test.rs  cast_without_length_test.rs  chained_comparisons_test.rs  clause_on_new_line_test.rs  closing_paren_new_line_test.rs  coalesce_null_arg_test.rs  coalesce_test.rs  coalesce_with_single_arg_test.rs  colon_cast_test.rs  column_alias_in_where_test.rs  (+290 more)
(+220 files in other folders)
