[workspace]
members = ["sqrust-core", "sqrust-rules", "sqrust-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sqrust-core = { path = "sqrust-core" }
sqrust-rules = { path = "sqrust-rules" }
sqlparser = "0.53"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
