[workspace]
members = ["sqrust-core", "sqrust-rules", "sqrust-cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Fast SQL linter written in Rust — the Ruff for SQL"
repository = "https://github.com/nafistiham/SQRust"
homepage = "https://github.com/nafistiham/SQRust"
readme = "README.md"
keywords = ["sql", "linter", "dbt", "sqlfluff"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
sqrust-core = { path = "sqrust-core", version = "0.1.3" }
sqrust-rules = { path = "sqrust-rules", version = "0.1.3" }
sqlparser = "0.53"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
glob = "0.3"
serde_json = "1"
