[package]
name = "sqrust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sqlparser = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
