[package]
name = "sqrust-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sqrust-core = { workspace = true }
sqlparser = { workspace = true }

[dev-dependencies]
sqrust-core = { workspace = true }
